# SortingAlgorithmVisualizer

./: CMakeLists.txt  README.md
.github/workflows/: windows-build-clang.yml  windows-build-msvc.yml  windows-build-msys2.yml
include/SortingAlgorithmVisualizer/: Atomics.hpp  Backend.hpp  CommonTypes.hpp  Containers.hpp  Frontend.hpp  MessageFormatting.hpp  Randomization.hpp  TimePoint.hpp  fwd.hpp
include/SortingAlgorithmVisualizer/Allocators/: Alignment.hpp  ArenaAllocator.hpp  IAllocator.hpp
include/SortingAlgorithmVisualizer/Containers/: CallbackStack.hpp  RingBuffer.hpp
include/SortingAlgorithmVisualizer/Sorters/: BubbleSorter.hpp  CocktailSorter.hpp  ISorter.hpp  ISorterSpecialized.hpp  InsertionSorter.hpp  MockSorter.hpp  SelectionSorter.hpp  SorterTemplate.hpp
include/glad/: gl.h  wgl.h
src/: Backend.cpp  Backend_threads.cpp  Frontend.cpp  ISorter.cpp  MessageFormatting.cpp  Randomization.cpp  SortingAlgorithmVisualizer.cpp  TimePoint.cpp  main.cpp
src/Allocators/: Alignment.cpp  ArenaAllocator.cpp  IAllocator.cpp
src/Containers/: CallbackStack.cpp  RingBuffer.cpp
src/glad/: gl.c
